[Gradle|Exec] fix: use Gradle TAPI's built-in VM options merger
### Issues
  * IDEA-363359 JVM args visibility is broken in a Gradle script during sync
  * IDEA-344664 Overwriting gradle vm options from gradle.properties
  * IDEA-309978 Duplicate parameter --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED when using Gradle 7.6 version

GitOrigin-RevId: 12cfb45138b09794a0d08d018ce03a14d4672c39